Fix footer spacing

--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -50,7 +50,7 @@
 %footer--label {
   @include fs(6);
   @include lh-heading;
-  @include mv(1);
+  @include mv(2);
 }
 
 %footer--links {
